src/components/cart/Cart.css
.cartContainer {
    background: white;
    position: absolute;
    flex: 1;
    top: 0;
    height: 100vh;
    width: 70vw;
    z-index: 10;
    transition: all 500ms ease;
}
.cartContainer h1 {
    text-align: center;
}
.emptyCart {
    text-align: center;
    font-size: 25px;
    font-weight: 500;
}
.cartItem {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2rem;
    border: 1px solid #ccc;
    padding: 2rem;
}
.itemDescription {
    flex: 0.6;
    display: flex;
    flex-direction: row;
    gap: 2rem;
}
.itemDescription img {
    width: 4rem;
    height: 4rem;
}
.itemNamePrice {
    flex: 0.5;
    display: flex;
    align-items: center;
    gap: 1rem;
}
.itemNamePrice span:first-of-type {
    font-size: 25px;
    font-weight: 600;
}
.itemNamePrice span:last-of-type {
    font-size: 20px;
    font-weight: 600;
}
.addAndRemoveItem {
    flex: 0.7;
    display: flex;
    flex-direction: row;
    gap: 2rem;
}
.add {
    display: flex;
    justify-content: center;
    align-items: center;
    background: blue;
    color: white;
    border-radius: 10px;
    width: 2rem;
    height: 2rem
}
.remove {
    display: flex;
    justify-content: center;
    align-items: center;
    background: red;
    color: white;
    border-radius: 10px;
    width: 2rem;
    height: 2rem
}
.totalPrice {
    display: flex;
    gap: 1rem;
    font-size: 20px;
    font-weight: 500;
}

